--- a/1.responsive-websites-html5-css3/css-learning.css
+++ b/1.responsive-websites-html5-css3/css-learning.css
@@ -1,10 +1,11 @@
-/* html, head, body, header, nav, section, footer, nav, div, figure, blockquote, ul-li, img, a, h, p, i,   */
+/* html, head, body, header, section, footer, nav, div, figure, blockquote, ul-li, img, a, h, p, i,   */
 
-
+/* simple setup for project */
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; /* should be inherit and set border-box in body */
+    /* box-sizing: inherit; */
 }
 
 html,
@@ -12,10 +13,12 @@ body {
     background-color: black;
     font-family: 'Courier New', Courier, monospace;
     color: #555;
-    font-size: 20px;
+    font-size: 62.5%; /* = 10px because the default is 16px */
     font-weight: 300;
     text-rendering: optimizeLegibility;
     overflow-x: hidden;
+    /* box-sizing: border-box; */
+    
 }
 
 .main-center {
@@ -36,11 +39,25 @@ body {
 .text {
     color: bisque;
     font-size: 240%;
+    font-weight: 100;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 1px;
     word-spacing: 4px;
+    line-height: 1;
+    writing-mode: vertical-rl;
 }
+
+.text-break {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
+
+.text-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 
 .image {
     height: 100px;
@@ -50,6 +67,8 @@ body {
     margin-top: -2px;
 }
 
+
+/* Center object */
 .position-parent {
     position: relative;
     /* không có class cha thì lấy về class relative gần nhất cho tới root */
@@ -69,6 +88,7 @@ body {
     background-attachment: fixed;
     height: 100vh;
     width: 100vw;
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); /*  https://bennettfeely.com/clippy/  */
 }
 
 a {
@@ -150,6 +170,7 @@ h2::after {
     height: auto;
     transform: scale(1.15);
     transition: transform 0.5s, opacity 0.5s;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
 
 .meal-photo img:hover {
@@ -181,6 +202,10 @@ blockquote:before {
     left: -5px;
 }
 
+div {
+    z-index: 2;
+}
+
 input[type=text],
 input[type=email],
 select,
@@ -192,3 +217,163 @@ textarea {
 }
 
 *:focus {outline: none;}
+/***** animation *****/
+/* transition */
+.object {
+    transition: propertyName time;
+}
+
+/* keyframes */
+.object {
+    animation-name: moveInLeft;
+    animation-duration: 5s;
+    animation-delay: 1s;
+    animation-iteration-count: 3;
+    animation-timing-function: forwards; /* keep the end state */
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+    backface-visibility: hidden;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+ /* flex box
+ <figure class="pizza">
+  <div class="pizza__hero">
+    <img src="https://images.unsplash.com/photo-1474600056930-615c3d706456?ixlib=rb-0.3.5&s=dc82336ad3e3873b0a81e9389d346916&auto=format&fit=crop&w=1952&q=80" alt="Pizza" class="pizza__img">
+  </div>
+  <div class="pizza__content">
+    <div class="pizza__title">
+      <h1 class="pizza__heading">Pizza Vegetale 👌</h1>
+      <div class="pizza__tag pizza__tag--1">#vegetarian</div>
+      <div class="pizza__tag pizza__tag--2">#italian</div>
+    </div>
+    <p class="pizza__description">Yummy veggie pizza with tasty olives, crisp peppers, fresh arugula and original italian tomato sauce.</p>
+    <div class="pizza__details">
+      <p class="pizza__detail"><span class="emoji">🍕</span>850 kcal</p>
+      <p class="pizza__detail"><span class="emoji">⏱</span>30 min</p>
+      <p class="pizza__detail"><span class="emoji">⭐️</span>4.7 / 5</p>
+    </div>
+  </div>
+  <div class="pizza__price">$11.99</div>
+</figure>
+ */
+.flex-box {
+    * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    }
+
+    body {
+    color: #444;
+    font-family: Roboto;
+    padding: 50px;
+    background: linear-gradient(to bottom right, #67b26f, #4ca2cd);
+    height: 100vh;
+    
+    display: flex;
+    align-items: center; // CROSS AXIS
+    justify-content: center; // MAIN AXIS
+    }
+
+    .pizza {
+    max-width: 800px;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 0 30px 80px 10px rgba(0,0,0,.2);
+    
+    display: flex;
+    align-items: stretch;
+    }
+
+    .pizza__hero {
+    flex: 0 0 45%;
+    }
+
+    .pizza__img {
+    width: 100%;
+    display: block;
+    }
+
+    .pizza__content {
+    flex: 1;
+    background: white;
+    padding: 35px 30px;
+    
+    display: flex;
+    flex-direction: column;
+    }
+
+    .pizza__price {
+    flex: 0 0 50px;
+    background: linear-gradient(to bottom, #67b26f, #4ca2cd);
+    writing-mode: vertical-rl;
+    color: white;
+    font-size: 18px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+
+    .pizza__title {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    }
+
+    .pizza__heading {
+    font-size: 20px;
+    margin-right: auto;
+    }
+
+    .pizza__tag {
+    font-size: 10px;
+    text-transform: uppercase;
+    color: white;
+    padding: 2px 7px;
+    border-radius: 100px;
+    margin-left: 7px;
+    }
+
+    .pizza__tag--1 { background-color: #67b26f; }
+    .pizza__tag--2 { background-color: #4ca2cd; }
+
+    .pizza__description {
+    font-size: 14px;
+    }
+
+    .pizza__details {
+    display: flex;
+    margin-top: auto;
+    }
+
+    .pizza__detail {
+    font-size: 15px;
+    text-transform: uppercase;
+    margin-right: 20px;
+    font-weight: 700;
+    
+    display: flex;
+    align-items: center;
+    }
+
+    .emoji {
+    font-size: 20px;
+    margin-right: 3px;
+    }
+}
